--- a/websugu.css
+++ b/websugu.css
@@ -27,9 +27,9 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    height: 70px;
+    height: 80px;
     z-index: 10;
-    padding-top: 5px;
+    padding-top: 6px;
     background-color:#ffffff;
 }
 
@@ -213,7 +213,7 @@ header{
     background-image: url(images/Untitled\ design.png);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 120vh;
+    height: 100vh;
     padding-top: 50px;
 }
 .contenair{
@@ -225,7 +225,7 @@ header{
 .make h1{
     font-family: 'Montserrat', sans-serif;
     color:white;
-    font-size: 45px;
+    font-size: 47px;
     padding-bottom: 25px;
     padding-top: 50px;
 }
@@ -284,6 +284,8 @@ header{
     text-align: center;
     margin-bottom: 50px;
     font-weight: 600;
+    margin-top: 60px;
+    font-size: 40px;
 }
 .services {
     display: flex;
@@ -292,8 +294,8 @@ header{
 }
 .service {
     width: 350px;
-    margin: 10px;
-    padding: 30px 30px 30px 30px;
+    margin: 18px;
+    padding: 40px 40px 40px 40px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -309,6 +311,8 @@ header{
 }
 .service p {
     color: #666;
+    font-size: 18px;
+    font-weight: 400;
 }
 /* SERVICES END HERE */
 
