--- a/websugu.css
+++ b/websugu.css
@@ -31,6 +31,7 @@ body{
     z-index: 10;
     padding-top: 6px;
     background-color:#ffffff;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
 .nav{
@@ -318,6 +319,51 @@ header{
 
 /* <!-- HEADER END HERE --> */
 
+/*<!--  SOLUTION START HERE -->*/
+.container_solution {
+    max-width: 1200px;
+    margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.solution {
+    width: 350px;
+    margin: 20px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+.solution h2 {
+    margin-bottom: 10px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+    font-weight: 900;
+}
+.solution h3{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 40px;
+    color: chocolate;
+}
+.solution p {
+    color: #666;
+    margin-bottom: 20px;
+    font-weight: 600;
+}
+.solution span{
+    font-size: 24px;
+    color: rgb(45, 42, 42);
+}
+.solution button{
+    padding: 5px 35px;
+    font-weight: 600;
+}
+.solution img{
+    width: 90%;
+}
+/*<!--  SOLUTION END HERE -->*/
 @media only screen and (max-width: 900px) {
    
 
@@ -469,15 +515,15 @@ header{
     background-image: url(images/Untitled\ design.png);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 110vh;
+    height: 125vh;
 }
 .contenair{
     display:block;
     text-align: center;
 }
 .make h1{
-    padding-top: 70px;
-    font-size: 35px;
+    padding-top: 40px;
+    font-size: 30px;
 }
 .ssl p{
     font-size: 15px;
@@ -493,13 +539,13 @@ hr{
 .code h4{
     margin: auto;
     font-weight: 500;
-    padding:6px 3px 6px 3px;
+    padding:6px 2px 6px 2px;
     width: 190px;
     border-radius: 2px;
     padding-left: 9px;
 }
 .head-get-started button{
-    margin-top: 60px;
+    margin-top: 55px;
     padding: 15px 70px 15px 70px;
     font-size: 18px;
     font-weight: 600;
@@ -515,6 +561,7 @@ hr{
 }
 .head-img{
     width: 90%;
+    padding-top: 30px;
 }
 /* <!-- HEADER END HERE --> */
 
