--- a/websugu.css
+++ b/websugu.css
@@ -564,6 +564,12 @@ hr{
     padding-top: 30px;
 }
 /* <!-- HEADER END HERE --> */
-
+/* SOLUTION START HERE */
+.solution button{
+    padding: 10px 35px;
+    font-weight: 600;
+    border: none;
+    color: #221f1f;
+}
 
 }
