--- a/websugu.css
+++ b/websugu.css
@@ -265,9 +265,7 @@ header{
     opacity: 0.80;
     box-shadow: 5px 5px 5px 5px  rgba(0,0,0,.20);
 }
-.off{
-    display: none;
-}
+
 /* timer start here */
 .timer {
     font-size: 36px;
@@ -531,9 +529,10 @@ header{
     font-size: 15px;
 }
 .head-price{
-    display: none;
+    margin-top: 30px;
+    font-size: 30px;color: white;
+    margin-bottom: 30px;
 }
-
 hr{
     display: none;
 }
@@ -544,12 +543,6 @@ hr{
     width: 190px;
     border-radius: 2px;
     padding-left: 3px;
-}
-.off{
-    display: block;
-    width: 12%;
-    margin: auto;
-    padding-bottom: 30px;
 }
 .head-get-started button{
     margin-top: 55px;
