--- a/CSS/websugu.css
+++ b/CSS/websugu.css
@@ -211,7 +211,7 @@ a:hover{
 
 /* <!-- HEADER CSS START HERE --> */
 header{
-    background-image: url(images/Untitled\ design.png);
+    background-image: url(images/Untitled design.png);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
