--- a/CSS/websugu.css
+++ b/CSS/websugu.css
@@ -211,7 +211,7 @@ a:hover{
 
 /* <!-- HEADER CSS START HERE --> */
 header{
-    background-image: url(images/Untitled design.png);
+    background-image: url(https://img1.wsimg.com/isteam/ip/49c6483d-74f6-4a78-85fb-2d5442936430/head_bg.png/:/rs=w:1920,m);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
@@ -586,7 +586,7 @@ header{
 
     /* <!-- HEADER CSS START HERE --> */
 header{
-    background-image: url(images/Untitled\ design.png);
+    background-image: url(https://img1.wsimg.com/isteam/ip/49c6483d-74f6-4a78-85fb-2d5442936430/head_bg.png/:/rs=w:1920,m);
     background-repeat: no-repeat;
     background-size: cover;
     height: 125vh;
