--- a/CSS/Plans.css
+++ b/CSS/Plans.css
@@ -576,7 +576,7 @@ a:hover{
     background-color:#c8704b;
     cursor: pointer;
     outline: none;
-    margin-right: 18px;
+    margin-left: 25px;
     margin-top: 30px;
   }
   input[type="checkbox"]:after{
