--- a/CSS/Search.css
+++ b/CSS/Search.css
@@ -151,8 +151,8 @@ a{
   cursor: pointer;
 }
   .container {
-  max-width: auto;
-  margin: 20px auto;
+  max-width: 310px;
+  margin: 0px auto;
   padding: 20px;
   background-color: #ffffff;
   border-radius: 5px;
