--- a/CSS/Search.css
+++ b/CSS/Search.css
@@ -152,7 +152,7 @@ a{
   cursor: pointer;
 }
   .container {
-  max-width: 310px;
+  max-width: auto;
   margin: 0px auto;
   padding: 20px;
   background-color: #ffffff;
