--- a/CSS/websugu.css
+++ b/CSS/websugu.css
@@ -47,7 +47,7 @@ body{
     color: var(--text-color);
 }
 .logo{
-    width: 13%;
+    width: 15%;
     cursor:pointer;
     margin-left: 30px;
 }
@@ -62,7 +62,7 @@ ul li a{
     transition: all 0.50s;
 }
 a:hover{
-    color: #dd8441;
+    color: #ff4400;
 }
 .nav-menu ul li{
     font-size: 17px;
@@ -79,7 +79,7 @@ a:hover{
   }
   
   .dropdown .dropbtn {
-    font-size: 16px;  
+    font-size: 17px;  
     border: none;
     outline: none;
     color: rgb(20, 20, 20);
@@ -93,20 +93,23 @@ a:hover{
     color: #dd8441;
   }
   .login-btn{
-    padding: 8px 30px 8px 30px;
-    font-weight: 500;background: #dd8441;border: none;
+    padding: 11px 30px 11px 30px;
+    font-weight: 600;font-size: 20px;
+    background-image: linear-gradient(to bottom right, #f97000,#fb882a, rgb(245, 245, 240));
+    border: none;
+    border-radius: 5px;
     color: white;
-    margin-right: 40px;
+    margin-right: 38px;
     cursor: pointer;
     transition: all 0.90s;
   }
   .login-btn:hover{
-    background:rgb(35, 25, 25);
+   opacity:  0.80;
   }
   .nav-menu a:hover, .dropdown:hover .dropbtn {
     background-color: none;
   }
-  
+  .login-btn1{display: none;}
   .dropdown-content {
     display: none;
     position: absolute;
@@ -206,23 +209,24 @@ a:hover{
     transform: rotate(-45deg);
     left: 6px;
 }
+.none1 ,.none2{display: none;}
 
 
 
 /* <!-- HEADER CSS START HERE --> */
 header{
-    background-image: url(https://img1.wsimg.com/isteam/ip/49c6483d-74f6-4a78-85fb-2d5442936430/head_bg.png/:/rs=w:1920,m);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    padding-top: 50px;
+  background-image: linear-gradient(to bottom right,#f97000, #e76423 30%, #ff5e00 63%, #fdddd0);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  padding-top: 50px;
 }
 .contenair{
     display: flex;
     align-items: center;
     justify-content: space-around;
     
-}
+}.cont-start{margin-left: 55px;}
 .make h1{
     font-family: 'Montserrat', sans-serif;
     color:white;
@@ -251,42 +255,44 @@ header{
    
 }
 .head-get-started button{
-    margin-top: 20px;
-    padding: 15px 70px 15px 70px;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 50px;
-    border: none;
-    cursor: pointer;
-    background-color: #ffffff;
-    transition: all 0.80s;
+  margin-top: 20px;
+  padding: 13px 35px 13px 35px;
+  font-weight: 800;font-size: 20px;
+  background-image: linear-gradient(to bottom right, #ffffff,#ffffff, rgb(255, 255, 255));
+  border: none;
+  border-radius: 5px;
+  color: #f97000;
+  margin-right: 40px;
+  cursor: pointer;
+  transition: all 0.90s;
 }
 .head-get-started button:hover{
-    opacity: 0.80;
-    box-shadow: 5px 5px 5px 5px  rgba(0,0,0,.20);
-}
+  opacity: 0.80;
+  box-shadow: 2px 2px 2px 2px  rgba(0,0,0,.20);
+}.head-img{padding-top: 30px;}
 
-/* timer start here */
+/* timer start here 
 .timer {
     font-size: 36px;
-    font-weight: 600;
     padding: 20px;
     margin-top: 10px;
+    font-weight: 800;
 }
-/* timer end here */
+timer end here */
 
 /* SERVICES START HERE */
+.services_bg{background-image: url("https://uploads-ssl.webflow.com/62a0fd9e90434a0628…557/62bd3b3af11f1f81431bc53e_Group%205207%202.png");}
 .container {
-    max-width: 1200px;
-    margin: 50px auto;
-    padding: 0 20px;
+  max-width: 1200px;
+  margin: 50px auto;
+  padding: 0 20px;
 }
 .container h1 {
     text-align: center;
     margin-bottom: 50px;
-    font-weight: 600;
+    font-weight: 700;
     margin-top: 60px;
-    font-size: 40px;
+    font-size: 38px;
 }
 .services {
     display: flex;
@@ -307,7 +313,7 @@ header{
 }
 .service h2 {
     font-size: 24px;
-    margin-bottom: 10px;color: chocolate;
+    margin-bottom: 10px;color: #f97000;
     font-weight: 500;
 }
 .service p {
@@ -320,6 +326,7 @@ header{
 /* <!-- HEADER END HERE --> */
 
 /*<!--  SOLUTION START HERE -->*/
+
 .container_solution {
     max-width: 1200px;
     margin: 20px auto;
@@ -345,7 +352,7 @@ header{
 .solution h3{
     font-family: 'Montserrat', sans-serif;
     font-size: 40px;
-    color: chocolate;
+    color: #f97000;
 }
 .solution p {
     color: #666;
@@ -365,6 +372,116 @@ header{
 }
 /*<!--  SOLUTION END HERE -->*/
 
+
+/* WRAPPER START HERE */
+.wrapper_body{
+  display: flex;
+  padding: 0 35px;
+  align-items: center;
+  justify-content: center;
+  min-height: 120vh;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: linear-gradient(to left top,#ffb070, #f1622e, #f97000);
+}
+.wrapper_h1 h1{font-weight: 700;font-size: 38px;color: white;line-height: 50px;margin-bottom: 70px;}
+.wrapper {
+  max-width: 1250px;
+  width: 100%;
+  position: relative;
+}
+.wrapper i {
+  top: 19%;
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+  font-size: 1.25rem;
+  position: absolute;
+  text-align: center;
+  line-height: 50px;
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.23);
+  transform: translateY(-50%);
+  transition: transform 0.1s linear;
+}
+.wrapper i:active{
+  transform: translateY(-50%) scale(0.85);
+}
+.wrapper i:first-child{
+  left: -22px;
+}
+.wrapper i:last-child{
+  right: -22px;
+}
+.wrapper .carousel{
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: calc((100% / 3) - 12px);
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  gap: 16px;
+  border-radius: 8px;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+}
+.carousel::-webkit-scrollbar {
+  display: none;
+}
+.carousel.no-transition {
+  scroll-behavior: auto;
+}
+.carousel.dragging {
+  scroll-snap-type: none;
+  scroll-behavior: auto;
+}
+.carousel.dragging .card {
+  cursor: grab;
+  user-select: none;
+}
+.carousel :where(.card, .img) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.carousel .card {
+  scroll-snap-align: start;
+  height: 542px;
+  list-style: none;
+  background: #fff;
+  cursor: pointer;
+  padding-bottom: 15px;
+  flex-direction: column;
+  border-radius: 15px;
+}
+.carousel .card .img {
+  background: #ffffff;
+  height: 140px;
+  width: 140px;
+  border-radius: 50%;
+}
+.card .img img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid #f97000;
+}
+.carousel .card h2 {
+  font-weight: 500;
+  font-size: 1.56rem;
+  margin: 30px 0 5px;
+}
+.carousel .card span {
+  color: #6A6D78;text-align: center;
+  font-size: 18px;font-weight: 400;padding: 30px;
+}
+.menu_logo{display: none;}
+
+
+/* WRAPPER END HERE */
+
+
+
+
 /* FOOTER START HERE */
 .container_footer{
     display: flex;
@@ -373,71 +490,192 @@ header{
     flex-wrap: wrap;
     
   }
+  
   .footer_form h3{
-    font-size: 24px;
-    color: white;
+    font-size: 20px;
+    color: rgb(162, 160, 160);
     text-decoration: underline;
     font-weight: 700;
     margin-bottom: 20px;
   }
   .footer_form input{
     width: 300px;
-    height: 45px;
+    height: 50px;background-color: #e8e9eb;
     margin-bottom: 12px;
     padding-left: 15px;
-    font-size: 16px;
+    font-size: 17px;font-weight: 600;border: none;
     border: none;
-    border-radius: 2px;
+    border-radius: 5px;
   }
   .footer_form button{
-    background-color: #c25421;
+    background-image: linear-gradient(to bottom right, #f97000,#fb882a, rgb(245, 245, 240));
+
     color: white;
     border: none;
     cursor: pointer;
-    font-weight: bold;
+    font-weight: 600;
     transition: all .3s ease;
     width: 300px;
-    height: 43px;
-    font-size: 17px;
-    border-radius: 2px;
+    height: 55px;
+    font-size: 22px;
+    border-radius: 5px;
   }
   .footer_form button:hover{
     opacity: 0.80;
   }
   .footer_containt h2{
     font-size: 28px;
-    color: rgb(244, 244, 244);
-    font-weight: 700;
+    color: rgb(162, 160, 160);
+    font-weight: 500;
   }
   .footer_containt ul li{
     padding-top: 20px;
   }
   .footer_containt ul li a{
     text-decoration: none;
-    color: black;
-    font-size: 17px;
+    color: rgb(69, 69, 69);font-weight: 500;
+    font-size: 15px;
     transition: all 0.6s;
   }
   .footer_containt ul li a:hover{
-    color: rgb(255, 255, 255);
+    color: #f97000;
     text-decoration: underline;
   }
   .footer{
-    background-image: linear-gradient(to bottom right, rgb(191, 86, 12) , rgb(225, 181, 131),rgb(191, 86, 12));
+    background-image: linear-gradient(to bottom right, rgb(255, 255, 255) rgb(255, 255, 255)1),rgb(255, 255, 255);
     padding: 50px 0px 50px 0px;
     margin-top: 100px;
   }
   .footer_form h4{
     margin-top: 15px;
-    font-weight: 600;
+    font-weight: 500;
   }
   .owner{
     text-align: center;
     color: rgb(34, 32, 32);
-    padding-top: 50px;
+    padding-top: 120px;
     font-weight: 400;
   }
 /* FOOTER END HERE */
+
+
+@media screen and (max-width: 900px) {
+  .wrapper .carousel {
+    grid-auto-columns: calc((100% / 2) - 9px);
+  }
+}
+@media screen and (max-width: 600px) {
+  .wrapper .carousel {
+    grid-auto-columns: 100%;
+  }
+  .wrapper_h1 h1{font-weight: 700;font-size: 30px;color: white;line-height: 40px;margin-bottom: 60px;}
+  
+  .wrapper_body{
+    display: flex;
+    padding: 0 35px;
+    align-items: center;
+    justify-content: center;
+    min-height: 90vh;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-image: linear-gradient(#f97000, rgb(253, 163, 84), rgb(255, 222, 203));  }
+  .wrapper {
+    max-width: 1250px;
+    width: 100%;
+    position: relative;
+  }
+  .wrapper i {
+    top: 20%;right: 10%;color: #f97000;
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+    font-size: 2rem;
+    position: absolute;
+    text-align: center;
+    line-height: 50px;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.23);
+    transform: translateY(-50%);
+    transition: transform 0.1s linear;
+  }
+
+  .carousel .card {
+    scroll-snap-align: start;
+    height: 502px;
+    list-style: none;
+    background: #fff;
+    cursor: pointer;
+    padding-bottom: 15px;
+    flex-direction: column;
+    border-radius: 15px;
+  }
+  .carousel .card .img {
+    background: #ffffff;
+    height: 140px;
+    width: 140px;
+    border-radius: 50%;
+  }
+  .card .img img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid #f97000;
+  }
+  .carousel .card h2 {
+    font-weight: 500;
+    font-size: 1.56rem;
+    margin: 30px 0 5px;
+  }
+  .carousel .card span {
+    color: #6A6D78;text-align: center;
+    font-size: 18px;padding: 10px;
+  }
+
+  /* SERVICES START HERE */
+.services_bg{background-image: url("https://uploads-ssl.webflow.com/62a0fd9e90434a0628…557/62bd3b3af11f1f81431bc53e_Group%205207%202.png");}
+.container {
+  max-width: 1500px;
+  margin: 50px auto;
+  padding: 0 20px;
+}
+.container h1 {
+    text-align: center;
+    margin-bottom: 50px;
+    font-weight: 600;
+    margin-top: 60px;
+    font-size: 40px;
+}
+.services {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.service {
+    width: 950px;
+    margin: 18px;
+    padding: 40px 40px 40px 40px;
+    background-color: #fff;
+    border-radius: 25px;
+    border: 1px solid  rgba(0,0,0,.1);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+.service:hover{border-color: #f97000ab;} 
+.service:hover {
+    transform: translateY(-5px);
+}
+.service h2 {
+    font-size: 24px;
+    margin-bottom: 10px;color: #f97000;
+    font-weight: 500;
+}
+.service p {
+    color: #000000;
+    font-size: 19px;
+    font-weight: 500;line-height: 30px;
+}
+/* SERVICES END HERE */
+}
 @media only screen and (max-width: 900px) {
    
 
@@ -478,18 +716,18 @@ header{
     .nav-menu {
         /* display: none; */
         position: absolute;
-        top: 100%;
+        top: 0%;
         left: -100%;
         background-color: #ffffff;
         flex-direction: column;
-        width: 65%;
+        width: 100%;
         height: 100vh;
-        padding: 20px;
-        transition: 0.5s ease-in-out;
+        padding: 0px;
+        transition: 0.5s ease-in-out;margin: auto;
     }
 
     .nav-menu a {
-        margin: 10px 30px;
+        margin:none;
     }
 
     .nav-menu.active {
@@ -497,34 +735,36 @@ header{
     }
 
 
+    .none1 ,.none2{display: block;}
+
 
     /*  */
+    .menu_logo{display: block;}
 
     .nav-menu{
         display: block;
     }
     ul li a{
-        font-weight: 600;
+        font-weight: 400;
     }
     .nav-menu ul li a{
-        font-size: 19px;
-        color: rgb(245, 122, 41);
+        font-size: 17px;
+        color: rgb(60, 60, 60);
         display: block;
         text-decoration: none;
-        padding: 0;
-        margin-right: 280px;
+        padding:0;
       }
 
       .dropdown {
-        float: left;
-        overflow: hidden;
+        float: none;
+        overflow: none;
+        display: none;
       }
       
       .dropdown .dropbtn {
-        color: rgb(0, 0, 0);
-        margin-left: 10px;
-        font-weight: 600;
-        font-size: 19px;
+        color: #30302f;
+        font-weight: 400;
+        font-size: 17px;
       }
       
       .nav-menu a:hover, .dropdown:hover .dropbtn {
@@ -532,21 +772,20 @@ header{
       }
       
       .dropdown-content {
-        display: none;
+        display: none;margin-left: 55px;
         position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
+        width: 300px;line-height: 40px;
+        
+       
       }
       
       .dropdown-content a {
         float: none;
         color: black;
-        padding: 12px 16px;
+        padding: 0;
         text-decoration: none;
         display: block;
-        text-align: left;
+        text-align: center;
       }
       
       .dropdown-content a:hover {
@@ -557,12 +796,23 @@ header{
         display: block;
       }
 
+      .login-btn1{
+        display: block;
+        padding: 11px 100px 11px 100px;
+    font-weight: 600;font-size: 20px;
+    background-image: linear-gradient(to bottom right, #f97000,#fb882a, rgb(245, 245, 240));
+    border: none;
+    border-radius: 5px;
+    color: white;
+    margin: auto;
+      }
+
 
       .login-btn{
-        padding: 10px 25px 10px 25px;
+        padding: 6px 18px 6px 18px;
         font-weight: 500;
-        color: white;display: block;margin-left: 50px;
-        border-radius: 20px;
+        color: white;display: block;margin-left: 60px;
+        border-radius: 5px;font-size: 16px;
       }
 
     
@@ -586,10 +836,11 @@ header{
 
     /* <!-- HEADER CSS START HERE --> */
 header{
-    background-image: url(https://img1.wsimg.com/isteam/ip/49c6483d-74f6-4a78-85fb-2d5442936430/head_bg.png/:/rs=w:1920,m);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 125vh;
+  background-image: linear-gradient(to bottom right,#f97000, #e76423 30%, #ff5e00 63%, #fdddd0);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  padding-top: 50px;
 }
 .contenair{
     display:block;
@@ -619,23 +870,25 @@ hr{
     padding-left: 3px;
 }
 .head-get-started button{
-    margin-top: 55px;
-    padding: 15px 70px 15px 70px;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 50px;
-    border: none;
-    cursor: pointer;
-    background-color: #ffffff;
-    transition: all 0.80s;
+  margin-top: 50px;
+  padding: 13px 70px 13px 70px;
+  font-weight: 800;font-size: 20px;
+  background-image: linear-gradient(to bottom right, #ffffff,#ffffff, rgb(255, 255, 255));
+  border: none;
+  border-radius: 5px;
+  color: #ff4400;
+  margin-right: 0px;
+  cursor: pointer;
+  transition: all 0.90s;
 }
 .head-get-started button:hover{
-    opacity: 0.80;
-    box-shadow: 5px 5px 5px 5px  rgba(0,0,0,.20);
-}
+  opacity: 0.80;
+  box-shadow: 2px 2px 2px 2px  rgba(0,0,0,.20);
+}.cont-start{margin-left:0;}
+
 .head-img{
     width: 90%;
-    padding-top: 30px;
+    padding-top: 50px;margin-left: 35px;
 }
 /* <!-- HEADER END HERE --> */
 
@@ -646,87 +899,80 @@ hr{
     border: none;
     color: #221f1f;
 }
-
+/*  */
 
 /* FOOTER START HERE */
 .container_footer{
-    display: block;
-    flex-wrap: wrap;
-    
-  }
-  .footer_form{
-    text-align: center;
-  }
-  .footer_form h3{
-    font-size: 24px;
-    color: white;
-    text-decoration: underline;
-    font-weight: 700;
-    margin-bottom: 20px;
-  }
-  .footer_form input{
-    width: 350px;
-    height: 50px;
-    margin-bottom: 12px;
-    padding-left: 15px;
-    font-size: 16px;
-    border: none;
-    border-radius: 2px;
-  }
-  .footer_form button{
-    background-color: #c25421;
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-weight: bold;
-    transition: all .3s ease;
-    width: 350px;
-    height: 50px;
-    font-size: 17px;
-    border-radius: 2px;
-  }
-  .footer_form button:hover{
-    opacity: 0.80;
-  }
-  .footer_containt{
-    margin-left: 30px;
-  }
-  .footer_containt h2{
-    margin-top: 30px;
-    font-size: 28px;
-    color: rgb(244, 244, 244);
-    font-weight: 700;
-  }
-  .footer_containt ul li{
-    padding-top: 20px;
-  }
-  .footer_containt ul li a{
-    text-decoration: none;
-    color: black;
-    font-size: 17px;
-    transition: all 0.6s;
-  }
-  .footer_containt ul li a:hover{
-    color: rgb(255, 255, 255);
-    text-decoration: underline;
-  }
-  .footer{
-    background-image: linear-gradient(to bottom right, rgb(191, 86, 12) , rgb(225, 181, 131),rgb(191, 86, 12));
-    padding: 30px 0px 30px 0px;
-    margin-top: 100px;
-  }
-  .footer_form h4{
-    margin-top: 15px;
-    font-weight: 600;
-  }
-  .footer_form i{
-    font-size: 18px;
-  }
-  .owner{
-    text-align: center;
-    color: rgb(34, 32, 32);
-    padding-top: 50px;
-    font-weight: 400;
-  }
+  display: block;
+  margin: auto;
+}
+
+.footer_form h3{
+  font-size: 20px;
+  color: rgb(162, 160, 160);
+  text-decoration: underline;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.footer_form input{
+  width: 342px;
+  height: 50px;background-color: #e8e9eb;
+  margin-bottom: 12px;
+  padding-left: 15px;
+  font-size: 17px;font-weight: 600;border: none;
+  border: none;
+  border-radius: 5px;
+}
+.footer_form button{
+  background-image: linear-gradient(to bottom right, #f97000,#fb882a, rgb(245, 245, 240));
+
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+  transition: all .3s ease;
+  width: 342px;
+  height: 55px;
+  font-size: 22px;
+  border-radius: 5px;
+}
+.footer_form button:hover{
+  opacity: 0.80;
+}.footer_containt{margin-left: 35px;margin-top: 40px;}
+.footer_containt h2{
+  font-size: 25px;
+  color: rgb(162, 160, 160);
+  font-weight: 500;
+}
+.footer_containt ul li{
+  padding-top: 20px;
+}
+.footer_containt ul li a{
+  text-decoration: none;
+  color: rgb(69, 69, 69);font-weight: 500;
+  font-size: 17px;
+  transition: all 0.6s;
+}
+.footer_containt ul li a:hover{
+  color: #f97000;
+  text-decoration: underline;
+}
+.footer{
+  background-image: linear-gradient(to bottom right, rgb(255, 255, 255) rgb(255, 255, 255)1),rgb(255, 255, 255);
+  padding: 50px 0px 50px 0px;
+  margin-top: 100px;
+}
+.footer_form{text-align: center;}
+.footer_form h4{
+  margin-top: 15px;
+  font-weight: 500;
+}
+.owner{
+  text-align: center;
+  color: rgb(34, 32, 32);
+  padding-top: 100px;
+  font-weight: 400;
+}
 /* FOOTER END HERE */
+
 }
